--- a/src/styles/issues.css
+++ b/src/styles/issues.css
@@ -12,7 +12,6 @@
 
 .tickback-counter {
     display: inline-flex;
-    margin-right: var(--base-size-4);
     max-width: 100%;
 }
 
@@ -24,6 +23,8 @@
     vertical-align: text-top;
     height: 20px;
     margin-top: 1px;
+    margin-right: 4px;
+    margin-left: 2px;
 }
 
 .tickback-counter-border {
@@ -80,6 +81,7 @@
 .tickback-svg-div.tickback-sticky {
     width: 16px;
     margin-right: 5px;
+    margin-left: 0px;
 }
 
 .tickback-svg-div.tickback-issues {
